Fix scrollbar + limit page width - Fixed sorting dropdown on firefox - Fixed horizontal scrollbar on really small displays - Limited page width on large displays - Fixed search input & search results not lining up due to scrollbar

--- a/viewer/src/index.css
+++ b/viewer/src/index.css
@@ -23,37 +23,58 @@ body {
   display: grid;
   grid-gap: 1em;
   grid-template-rows: 3em 1fr;
-  grid-template-areas: 'search-input'
-                       'search-results';
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-areas: '.. search-input ..'
+                       '.. search-results ..';
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 6em;
+  background-image: linear-gradient(#222, #222, #222, transparent);
 }
 
 .search-input-container {
-  grid-area: search-input;
+  width: calc(100% - 2em);
+  max-width: 60em;
+  /* grid-area: search-input; */
   display: grid;
-  grid-template-columns: 3em 1fr 3em 3em 8em;
+  grid-template-columns: 2.5em 1fr 2.5em 2.5em 7em;
   align-items: center;
   text-align: center;
-  margin: 0 1em;
+  margin: 1em auto;
   padding: 0;
   background-color: #333;
   box-shadow: var(--shadow);
 }
 
+.search-input-container * {
+  background-color: #333;
+  height: 3em;
+}
+
 .search-input-container i {
   user-select: none;
+  max-width: 60em;
+  display: grid;
+  align-items: center;
 }
 
 .search-input-container select {
   position: relative;
-  height: 100%;
+  height: 3.6em;
   background-color: #333;
   color: #c3c3c3;
   border: none;
-  margin: 0 1em;
+  margin: 0;
 }
 
 .search-input {
-  padding: 0.5em 0;
+  overflow-y: auto;
+  padding: 0.3em 0;
   outline: none;
   border: none;
   color: #c3c3c3;
@@ -61,9 +82,10 @@ body {
 }
 
 .search-result-container {
-  overflow-y: auto;
   grid-area: search-results;
-  padding: 0 1em;
+  padding: 0;
+  padding-top: .5em;
+  max-width: 60em;
 }
 
 .search-result {
@@ -73,6 +95,7 @@ body {
 
   padding: 1em 0.5em;
   margin: 1em 0;
+  margin-top: 0;
   background-color: #333;
   box-shadow: var(--shadow);
   grid-template-columns: 1fr 8em;
@@ -83,7 +106,7 @@ body {
 
 .title {
   grid-area: title;
-  white-space: nowrap; 
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -117,7 +140,6 @@ body {
 .tag {
   display: inline;
   cursor: pointer;
-  white-space: nowrap;
 }
 
 .tag:hover {
